--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link
             rel="icon"
-            href="/src/assets/favicon.png"
+            href="/src/assets/logos/favicon.ico"
             type="image/svg+xml" />
         <meta
             name="viewport"
